add moderator stats endpoint
